--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "globals": "^16.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.5",
+    "jest-ctrf-json-reporter": "^0.0.9",
     "jest-environment-jsdom": "^30.0.5",
     "redux-mock-store": "^1.5.5",
     "ts-jest": "^29.4.1",
