--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "jest-ctrf-json-reporter": "^0.0.9",
     "jest-environment-jsdom": "^30.0.5",
     "redux-mock-store": "^1.5.5",
+    "stylelint": "^16.23.1",
+    "stylelint-config-standard": "^39.0.0",
     "ts-jest": "^29.4.1",
     "typescript": "^5.9.2",
     "vite": "^7.1.2"
