Code is cleaner and DRYer.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"],
+      "@test/*": ["test/*"],
       "test-utils": ["<rootDir>/test/app"]
     },
     "target": "es6",                          
